updated landing page

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,4 +1,4 @@
-.room-mateRadar {
-  background: url("images/room-mateRadar.jpg") no-repeat center center fixed;
+.landing-container-background {
+  background: url("images/landing-container-background.jpg") no-repeat center center fixed;
   background-size: cover;
 }
