Worked on Issue #18
* Description should be showing parts  in list and full on my profile
*tweak edit profile so it supports data with , and without
*still need to implement a way to catch user inputs. like separating types of animals with , and not having similar pets in black and white list

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -2,3 +2,10 @@
   background: url("images/landing-container-background.jpg") no-repeat center center fixed;
   background-size: cover;
 }
+
+.circular-image {
+  width: 100px;
+  border-radius: 50%;
+  border-width: 10px;
+  border-radius: 10px;
+}
