--- a/app/client/style.css
+++ b/app/client/style.css
@@ -3,9 +3,25 @@
   background-size: cover;
 }
 
+.white-gray-border {
+  border-color: white;
+  border-width: 10px;
+  border-style: solid;
+  border-radius: 10px;
+}
+
 .circular-image {
   width: 100px;
   border-radius: 50%;
-  border-width: 10px;
-  border-radius: 10px;
+}
+
+.bigger-font {
+  font-size: large;
+  font-family: monospace;
+}
+
+.slightly-smaller-font {
+  color: black;
+  font-size: small;
+  font-family: monospace;
 }
